# dorian

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
dorian/: cli.py  clone.py  command.py  extract.py  git.py  write.py
tests/: test_cli.py
